force-app/main/default/objects/Pre_Approved_SPA_Type__c/Pre_Approved_SPA_Type__c.object-meta.xml
<CustomObject>
    <label>Pre Approved SPA Type</label>
    <nameField>
        <label>Pre Approved SPA Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Approved SPA Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>