force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the record approved or not</description>
    <inlineHelpText>Indicate if the record approved or not</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>