force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Change_Comments__c.field-meta.xml
<CustomField>
    <fullName>Change_Comments__c</fullName>
    <label>Change Comments</label>
    <type>TextArea</type>
</CustomField>