force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Distribution_Partner__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pre Approved SPA Types (Distribution Partner)</relationshipLabel>
    <relationshipName>Pre_Approved_SPA_Types1</relationshipName>
    <type>Lookup</type>
</CustomField>