force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Est_Blended_Margin__c.field-meta.xml
<CustomField>
    <fullName>Est_Blended_Margin__c</fullName>
    <label>Est. Blended Margin</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>