force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Est_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_Discount__c</fullName>
    <label>Est. Total Discount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>