force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Est_Value__c.field-meta.xml
<CustomField>
    <fullName>Est_Value__c</fullName>
    <label>Est Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>