force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Finance_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Finance_Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Level 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pre_Approved_SPA_Types1</relationshipName>
    <type>Lookup</type>
</CustomField>