force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Finance_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Finance_Level_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Level 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pre_Approved_SPA_Types2</relationshipName>
    <type>Lookup</type>
</CustomField>