force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Identify_Approvers_Failed__c.field-meta.xml
<CustomField>
    <fullName>Identify_Approvers_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identify Approvers Failed</label>
    <type>Checkbox</type>
</CustomField>