force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Prime_Partner__c.field-meta.xml
<CustomField>
    <fullName>Prime_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prime Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pre Approved SPA Types</relationshipLabel>
    <relationshipName>Pre_Approved_SPA_Types</relationshipName>
    <type>Lookup</type>
</CustomField>