force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Sales_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Sales_Level_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Level 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pre_Approved_SPA_Types8</relationshipName>
    <type>Lookup</type>
</CustomField>