force-app/main/default/objects/Pre_Approved_SPA_Type__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPG</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Part Number</fullName>
            </value>
            <value>
                <fullName>Hospitality Flag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>