force-app/main/default/objects/Pre_Approved_SPA_Type__c/recordTypes/Framework.recordType-meta.xml
<RecordType>
    <fullName>Framework</fullName>
    <active>true</active>
    <label>Framework</label>
</RecordType>