force-app/main/default/objects/Pre_Approved_SPA_Type__c/recordTypes/Hospitality.recordType-meta.xml
<RecordType>
    <fullName>Hospitality</fullName>
    <active>true</active>
    <label>Hospitality</label>
</RecordType>