force-app/main/default/objects/Pre_Approved_SPA_Type__c/recordTypes/VPA.recordType-meta.xml
<RecordType>
    <fullName>VPA</fullName>
    <active>true</active>
    <label>VPA</label>
</RecordType>